<resources>
    <string name="app_name">Events</string>
    <string name="login_title">Log In</string>
    <string name="signup_title">Do not have an account? Sign Up</string>
    <string name="register_title">Register</string>
    <string name="hint_email_username">Email or Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_event_list">My Event List</string>
    <string name="error_invalid_login">Incorrect user or password. Please try again.</string>
    <string name="events_title">Events</string>
    <string name="sms_title">SMS</string>
    <string name="add_title">Add</string>
    <string name="logout_title">Log Out</string>
    <string name="sms_permission">App SMS Permission Required</string>
    <string name="sms_description_title">This app uses SMS notifications to daily remind you of upcoming events. You can enable or disable SMS notifications at any time in your settings. Disabling this permission will not affect the rest of the app’s features.</string>
    <string name="deny_button">DENY</string>
    <string name="allow_button">ALLOW</string>
    <string name="sms_disable">Do you want to disable SMS features?</string>
    <string name="sms_disable_description">You will no longer receive SMS notifications from this app until enabling this feature again on the main screen button.</string>
    <string name="YES_button">YES</string>
    <string name="NO_button">NO</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="add_event_title">Add New Event</string>
    <string name="edit_event_title">Edit Existing Event</string>
    <string name="event_name_title">Event Name</string>
    <string name="hint_enter_event_name">Enter event name</string>
    <string name="short_description_title">Short Description</string>
    <string name="hint_optional_details">Optional details</string>
    <string name="start_date_title">Start Date</string>
    <string name="hint_date">YYYY/MM/DD</string>
    <string name="end_date_title">End Date</string>
    <string name="start_time_title">Start Time</string>
    <string name="hint_time">HH:MM</string>
    <string name="end_time_title">End Time</string>
    <string name="cancel_button">CANCEL</string>
    <string name="save_button">SAVE</string>
    <string name="update_button">UPDATE</string>
    <string name="enable_sms_alerts">Enable SMS Alerts?</string>
    <string name="sms_ask_to_receive">Would you like to receive text notifications for your events?</string>
    <string name="enable">Enable</string>
    <string name="sms_alerts_enabled">SMS Alerts Enabled</string>
    <string name="sms_alerts_disabled">SMS Alerts Disabled</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mfa_introduce_code_title">Introduce the security code sent to your number ending in XXXX</string>
    <string name="mfa_incorrect_code">Incorrect code, try again.</string>
    <string name="introduce_new_password">Introduce new password</string>
    <string name="past_events">Past Events</string>
    <string name="calendar_title">Calendar</string>
    <string name="events_calendar_title">Events Calendar</string>
    <string name="no_events_scheduled_for_this_day">No events scheduled for this day</string>
    <string name="search_title">Search</string>
</resources>